fix: layout issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
- 
+
+html, body, #__next {
+  height: 100%;
+}
+
+
 @layer base {
   :root {
     --background: 0 0% 100%;
